--- a/MyPHesabdari/appsettings.Development.json
+++ b/MyPHesabdari/appsettings.Development.json
@@ -6,5 +6,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "CN": "Data source=.\\SQLEXPRESS;initial catalog=my_accounting_db;integrated security=true;"
+  },
+  "MyRemoteLoggerAddress": "http://loggerserver.mine"
 }
