costs can be edited now

--- a/MyPHesabdari/appsettings.Development.json
+++ b/MyPHesabdari/appsettings.Development.json
@@ -8,7 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "CN": "Data source=.\\SQLEXPRESS;initial catalog=my_accounting_db;integrated security=true;"
+    "CN": "Data source=.\\SQLEXPRESS;initial catalog=myhesabdari;integrated security=true;"
   },
   "MyRemoteLoggerAddress": "http://loggerserver.mine"
 }
