CookieAuthentication is added

--- a/MyPHesabdari/appsettings.json
+++ b/MyPHesabdari/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "CN": "Data source=.\\SQLEXPRESS;initial catalog=myhesabdari;integrated security=true;"
   },
-  "MyRemoteLoggerAddress": "http://loggerserver.mine"
+  "MyRemoteLoggerAddress": "http://loggerserver.mine",
+  "Google": {
+    "ClientId": "487554273372-7i4210jttq45h7hemurvhah8vctnh104.apps.googleusercontent.com",
+    "ClientSecret": "JMYNHU4Uwq3NIgydK5_2jJMM"
+  }
 }
